--- a/StellaSoraSniffer/StellaSoraSniffer.vcxproj
+++ b/StellaSoraSniffer/StellaSoraSniffer.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="HookManager.h" />
     <ClInclude Include="Hooks.h" />
+    <ClInclude Include="Memory.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PrintHelper.h" />
     <ClInclude Include="Types.h" />
@@ -183,6 +184,7 @@
     <ClCompile Include="FileWriter.cpp" />
     <ClCompile Include="HookManager.cpp" />
     <ClCompile Include="Hooks.cpp" />
+    <ClCompile Include="Memory.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
