--- a/StellaSoraSniffer/StellaSoraSniffer.vcxproj.filters
+++ b/StellaSoraSniffer/StellaSoraSniffer.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="FileWriter.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Memory.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -66,6 +69,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="FileWriter.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Memory.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
